clusters/core-ci/cert-manager/sippy-ingress.yaml
# Wave 1 DPTP-4267. DNS stays on app.ci until cutover. Do not oc apply.
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sippy
  namespace: bparees
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    haproxy.router.openshift.io/timeout: 2m
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - sippy.ci.openshift.org
      secretName: sippy-tls
  rules:
    - host: sippy.ci.openshift.org
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: sippy-redirector
                port:
                  number: 8080
